--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,10 @@
 @import '~bootstrap/scss/bootstrap';
+
+.jumbotron {
+  background-image: url('../public/homepage.jpg');
+  background-size: cover;
+}
+
+.modal-content {
+  background-color: rgba(192, 192, 192, 0.4);
+}
