--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,7 +1,7 @@
 @import '~bootstrap/scss/bootstrap';
 
 .jumbotron {
-  background-image: url('../public/homepage.jpg');
+  background-image: url('../public/homepage1.jpg');
   background-size: cover;
 }
 
